fixed unaligned obj?

--- a/styles.css
+++ b/styles.css
@@ -34,15 +34,7 @@ html {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #555;
 }
-@keyframes slidein {
-    from {
-      transform: translateX(-50%);
-    }
-  
-    to {
-      transform: translateX(0%);
-    }
-  }
+
 @keyframes orb {
     0%{
         transform: scale(0.9);
@@ -178,7 +170,7 @@ a:hover{
     font-family: 'wadiafont';
     
     margin-top: 100px;
-    animation: slidein 1s ;
+    
     animation: pulsesize 3s infinite;
     font-size: 75px;
     
@@ -281,7 +273,7 @@ border: solid 2px #000000;
     position: absolute;
     margin-left: 770px;
     margin-top: 75px;
-    animation: slidein 2s ;
+    
     
 }
 #chainstitle{
